# trt-custom-plugins

./: .gitignore  .gitmodules  README.md
plugin/cosLUPlugin/: README.md  cos.engine  export.py  models.py  sample_input.py
plugin/cosLUPlugin/new/: CMakeLists.txt  op.cpp
plugin/cosLUPlugin/trtPlugin/: CMakeLists.txt  cosLUKernel.cu  cosLUPlugin.cpp  cosLUPlugin.h  cosLUPlugin.h.old  vfcCommon.cpp  vfcCommon.h
plugin/cosLUPlugin/tsPlugin/: CMakeLists.txt  op.cpp
plugin_trt/: CMakeLists.txt
plugin_trt/api/: inferPlugin.cpp
plugin_trt/cosLUPlugin/: CMakeLists.txt  cosLUKernel.cu  cosLUPlugin.cpp  cosLUPlugin.h
